cmake_minimum_required(VERSION 3.26)
project(documentacion_de_una_clase)

set(CMAKE_CXX_STANDARD 17)

add_executable(documentacion_de_una_clase main.cpp
        IntCell.h
        IntCell.cpp
        IntCell.h
        "../Crear una clase tipo float/main.cpp"
        "../Crear una clase tipo float/main.cpp"
        "../Crear una clase tipo float/FloatCell.cpp")
